[package]
name = "path-calculate"
version = "0.1.0"
authors = ["Jia Chao <jiachao2130@126.com>"]
edition = "2018"
license = "MIT"
readme = "README.md"
repository = "https://github.com/Jchao/path-calculate"
keywords = ["path", "absolutize", "relative", "home_dir"]
include = ["src/**/*", "Cargo.toml", "README.md"]
description = "A small path tool works for calculate absolutive or relative path."

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
path-absolutize = "3.0.6"
